--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,3 +7,9 @@ footer a:hover {
     font-weight: bold;
     text-decoration: none;
 }
+
+@media (max-width: 767.98px) {
+    .card {
+        min-width: 100%;
+    }
+}
